@@ -1,13 +1,13 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 application {
     mainClassName = 'com.monkygames.kbmaster.KeyboardingMaster'
-    applicationDefaultJvmArgs = [ '-Djava.library.path=libs/native' , '-Djdk.gtk.version=2' ]
+    applicationDefaultJvmArgs = [ '-Djava.library.path=libs/native' , '-Djdk.gtk.version=2', '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens', 'java.base/java.text=ALL-UNNAMED', '--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED']
 }
 javafx {
-    version = "14.0.1"
+    version = "17.0.13"
     modules = [ 'javafx.controls' , 'javafx.fxml' , 'javafx.web' , 'javafx.swing' ]
 }
 repositories {
